<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgRootLayoutColor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_layout_big"
        android:orientation="vertical">
<!--
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:visibility="gone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/et_enquiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enquiry"
            android:visibility="gone" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_email"
            style="@style/customButton"
            android:text="@string/emailUs"
            android:visibility="gone" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_sms"
            style="@style/customButton"
            android:text="@string/sMSUs"
            android:visibility="gone" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_call"
            style="@style/customButton"
            android:text="Call  Us"
            android:visibility="gone" />-->

        <com.rey.material.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cantact_us" />

        <com.rey.material.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_cantact_us" />

        <com.rey.material.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tell_cantact_us" />

        <com.rey.material.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_cantact_us" />

    </LinearLayout>
</RelativeLayout>